log
sá., 17 de may. de 2025 13:48:49: 
 sudoku.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
3f0e54c
sá., 17 de may. de 2025 14:06:26: 
 sudoku.c | 47 +++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 47 insertions(+)
 tests:  5|3
total_score: 35/70
ca68956
sá., 17 de may. de 2025 14:13:40: 
 sudoku.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
42e2a8b
sá., 17 de may. de 2025 14:21:57: 
 sudoku.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
6d1db3e
sá., 17 de may. de 2025 15:13:27: 
 sudoku.c | 28 ++++++++++++++++++++++++++++
 1 file changed, 28 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:150:23: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
     List* adj_nodes = (Node*) first(adj_nodes);
                       ^
sudoku.c:153:17: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
       adj_nodes = (Node*) next(adj_nodes);
                 ^
cc1.exe: all warnings being treated as errors
15f0332
